--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Press+Start+2P&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/components/title.css">
+    
     <title>Happy Curriculum</title>
 
   </head>
@@ -25,5 +27,6 @@
         <a id="button" lang="en" href="">Download CV</a>
       </nav>
     </header>
+    <h1>John Tobo</h1>
   </body>
 </html>
