Create the subtitle

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/components/title.css">
-    
+    <link rel="stylesheet" href="css/components/subtitle.css">
+
     <title>Happy Curriculum</title>
 
   </head>
@@ -28,5 +29,6 @@
       </nav>
     </header>
     <h1>John Tobo</h1>
+    <h2>FrontEnd Developer</h2>
   </body>
 </html>
