create the box component

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/components/title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
+    <link rel="stylesheet" href="css/components/box.css">
 
     <title>Happy Curriculum</title>
 
@@ -28,7 +29,13 @@
         <a id="button" lang="en" href="">Download CV</a>
       </nav>
     </header>
-    <h1>John Tobo</h1>
-    <h2>FrontEnd Developer</h2>
+    
+    <div id="box">
+      
+      <h1>John Tobo</h1>
+      <h2>FrontEnd Developer</h2>
+
+    </div>
+
   </body>
 </html>
