Create button component

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/components/button.css">
     <link rel="stylesheet" href="css/components/title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
@@ -26,7 +27,7 @@
         <a href="">Projetos</a>
         <a href="">Sobre</a>
         <a href="">Contatos</a>
-        <a id="button" lang="en" href="">Download CV</a>
+        <a class="button" lang="en" href="">Download CV</a>
       </nav>
     </header>
     
@@ -36,6 +37,7 @@
       <h2>FrontEnd Developer</h2>
 
     </div>
-
+    <a class="button" lang="en" href="">Download CV</a>
+    <a class="button" href="">Contatos</a>
   </body>
 </html>
