--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Press+Start+2P&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/components/header.css">
+    <link rel="stylesheet" href="css/components/action.css">
     <link rel="stylesheet" href="css/components/button.css">
     <link rel="stylesheet" href="css/components/title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
@@ -19,22 +20,22 @@
   </head>
   
   <body>
-    <header>
+    <header class="header">
       <img src="assets/img/logo.png" alt="logo">
 
       <nav>
-        <a href="">Skills</a>
-        <a href="">Projetos</a>
-        <a href="">Sobre</a>
-        <a href="">Contatos</a>
+        <a class="action" href="">Skills</a>
+        <a class="action" href="">Projetos</a>
+        <a class="action" href="">Sobre</a>
+        <a class="action" href="">Contatos</a>
         <a class="button" lang="en" href="">Download CV</a>
       </nav>
     </header>
     
-    <div id="box">
+    <div class="box">
       
-      <h1>John Tobo</h1>
-      <h2>FrontEnd Developer</h2>
+      <h1 class="title">John Tobo</h1>
+      <h2 class="subtitle">FrontEnd Developer</h2>
 
     </div>
     <a class="button" lang="en" href="">Download CV</a>
