--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/components/title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
+    <link rel="stylesheet" href="css/components/banner.css">
 
     <title>Happy Curriculum</title>
 
@@ -32,13 +33,20 @@
       </nav>
     </header>
     
-    <div class="box">
-      
-      <h1 class="title">John Tobo</h1>
-      <h2 class="subtitle">FrontEnd Developer</h2>
+    <section class="banner">
+      <div class="wrapper">
+        <div class="box">  
+          <h1 class="title">John Tobo</h1>
+          <h2 class="subtitle">FrontEnd Developer</h2>
+        </div>
+        <div class="navigation">
+          <a class="button" lang="en" href="">Download CV</a>
+          <a class="button" href="">Contatos</a>
 
-    </div>
-    <a class="button" lang="en" href="">Download CV</a>
-    <a class="button" href="">Contatos</a>
+        </div>
+      </div>
+    </section>
+
+
   </body>
 </html>
