--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/components/header.css">
-    <link rel="stylesheet" href="css/components/action.css">
+    <link rel="stylesheet" href="css/components/banner.css">
+    <link rel="stylesheet" href="css/components/section.css">
     <link rel="stylesheet" href="css/components/button.css">
     <link rel="stylesheet" href="css/components/title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
-    <link rel="stylesheet" href="css/components/banner.css">
-
+    <link rel="stylesheet" href="css/components/action.css">
     <title>Happy Curriculum</title>
 
   </head>
@@ -46,8 +46,9 @@
         </div>
       </div>
     </section>
-
-    <h2 class="title -second">Skills</h2>
+    <section class="section">
+      <h2 class="title -second">Skills</h2>
+    </section>
 
 
   </body>
