--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     <link rel="stylesheet" href="css/components/banner.css">
     <link rel="stylesheet" href="css/components/section.css">
     <link rel="stylesheet" href="css/components/button.css">
-    <link rel="stylesheet" href="css/components/title.css">
+    <link rel="stylesheet" href="css/components/main-title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
     <link rel="stylesheet" href="css/components/action.css">
+    <link rel="stylesheet" href="css/components/skill-tec.css">
+    <link rel="stylesheet" href="css/components/progress-bar.css">
     <title>Happy Curriculum</title>
 
   </head>
@@ -36,7 +38,7 @@
     <section class="banner">
       <div class="wrapper">
         <div class="box">  
-          <h1 class="title">John Tobo</h1>
+          <h1 class="main-title">John Tobo</h1>
           <h2 class="subtitle">FrontEnd Developer</h2>
         </div>
         <div class="navigation">
@@ -47,7 +49,19 @@
       </div>
     </section>
     <section class="section">
-      <h2 class="title -second">Skills</h2>
+      <h2 class="main-title -second">Skills</h2>
+
+      <article class="skill-tec">
+        <img class="icon" src="img/ico_html5.png" alt="logo html5 em pixel art">
+        <div class="right">
+          <h3 class="title"> 
+            HTML
+          </h3>
+          <progress class="progress-bar" max="100" value="65">
+            70%
+          </progress>
+        </div>
+      </article>
     </section>
 
 
