--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <link rel="stylesheet" href="css/components/action.css">
     <link rel="stylesheet" href="css/components/skill-tec.css">
     <link rel="stylesheet" href="css/components/progress-bar.css">
+    <link rel="stylesheet" href="css/components/wrapper-skill.css">
+    <link rel="stylesheet" href="css/components/wrapper-card.css">
+    <link rel="stylesheet" href="css/components/card-project.css">
     <title>Happy Curriculum</title>
 
   </head>
@@ -51,6 +54,7 @@
     <section class="section">
       <h2 class="main-title -second">Skills</h2>
 
+      <div class="wrapper-skill">  
       <article class="skill-tec">
         <img class="icon" src="img/ico_html5.png" alt="logo html5 em pixel art">
         <div class="right">
@@ -62,8 +66,102 @@
           </progress>
         </div>
       </article>
+      <article class="skill-tec">
+        <img class="icon" src="img/ico_nodejs.png" alt="logo nodejs em pixel art">
+        <div class="right">
+          <h3 class="title"> 
+            NodeJS
+          </h3>
+          <progress class="progress-bar" max="100" value="65">
+            70%
+          </progress>
+        </div>
+      </article>
+      <article class="skill-tec">
+        <img class="icon" src="img/ico_css3.png" alt="logo CSS3 em pixel art">
+        <div class="right">
+          <h3 class="title"> 
+            CSS3
+          </h3>
+          <progress class="progress-bar" max="100" value="65">
+            70%
+          </progress>
+        </div>
+      </article>
+      <article class="skill-tec">
+        <img class="icon" src="img/ico_tdd.png" alt="logo tdd em pixel art">
+        <div class="right">
+          <h3 class="title"> 
+            TDD
+          </h3>
+          <progress class="progress-bar" max="100" value="65">
+            70%
+          </progress>
+        </div>
+      </article>
+      <article class="skill-tec">
+        <img class="icon" src="img/ico_js.png" alt="logo js em pixel art">
+        <div class="right">
+          <h3 class="title"> 
+            JavaScript
+          </h3>
+          <progress class="progress-bar" max="100" value="65">
+            70%
+          </progress>
+        </div>
+      </article>
+      <article class="skill-tec">
+        <img class="icon" src="img/ico_restapi.png" alt="logo rest api em pixel art">
+        <div class="right">
+          <h3 class="title"> 
+            Rest API
+          </h3>
+          <progress class="progress-bar" max="100" value="65">
+            70%
+          </progress>
+        </div>
+      </article>
+      <article class="skill-tec">
+        <img class="icon" src="img/ico_react.png" alt="logo react em pixel art">
+        <div class="right">
+          <h3 class="title"> 
+            React
+          </h3>
+          <progress class="progress-bar" max="100" value="65">
+            70%
+          </progress>
+        </div>
+      </article>
+      <article class="skill-tec">
+        <img class="icon" src="img/ico_ux.png" alt="logo ux em pixel art">
+        <div class="right">
+          <h3 class="title"> 
+            UX
+          </h3>
+          <progress class="progress-bar" max="100" value="65">
+            70%
+          </progress>
+        </div>
+      </article>
+    </div>
     </section>
-
-
+    <section class="section -bgBlack">
+      <h2 class="main-title -second">
+        Projetos
+      </h2>
+      <div class="wrapper-card">
+        <a href="#">
+          <figure class="card-project">
+            <img class="logo" src="img/logo-firedlabs.png" alt="logo firedlabs">
+          </figure>
+        </a>
+        <figure class="card-project -blue">
+          <img class="logo" src="img/logo-collabcode.png" alt="logo collabcode">
+        </figure>
+        <figure class="card-project -white">
+          <img class="logo" src="img/efixe.png" alt="logo efixe">
+        </figure>
+      </div>
+    </section>
   </body>
 </html>
