--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/components/main-title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
-    <link rel="stylesheet" href="css/components/action.css">
+    <link rel="stylesheet" href="css/components/main-action.css">
     <link rel="stylesheet" href="css/components/skill-tec.css">
     <link rel="stylesheet" href="css/components/progress-bar.css">
     <link rel="stylesheet" href="css/components/wrapper-skill.css">
@@ -30,10 +30,10 @@
       <img src="assets/img/logo.png" alt="logo">
 
       <nav>
-        <a class="action" href="">Skills</a>
-        <a class="action" href="">Projetos</a>
-        <a class="action" href="">Sobre</a>
-        <a class="action" href="">Contatos</a>
+        <a class="main-action" href="">Skills</a>
+        <a class="main-action" href="">Projetos</a>
+        <a class="main-action" href="">Sobre</a>
+        <a class="main-action" href="">Contatos</a>
         <a class="button" lang="en" href="">Download CV</a>
       </nav>
     </header>
